--- a/aktivitas.html
+++ b/aktivitas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head></head>
+<html lang="en">
+  <head></head>
   <body>
     <section id="home">
       <div class="container">
@@ -8,28 +9,49 @@
             <div class="col-12 mt-3 mt-lg-0">
               <div class="welcome3 p-4 position-relative h-100 w-100">
                 <div class="welcome-container2">
-                  <div class="welcome-judul3 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
-                  <div class="welcome-isi3 lh-1 mt-3">Siap ga?, Siaplah masa engga, yuk beraktivitas!</div>
+                  <div
+                    class="welcome-judul3 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+                  >
+                    welcome!
+                  </div>
+                  <div class="welcome-isi3 lh-1 mt-3">
+                    Siap ga?, Siaplah masa engga, yuk beraktivitas!
+                  </div>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-3 mt-3 home3">
-              <img src="public/images/tos.jpg" alt="sepeda" class="w-100 h-100 sepeda" />
+              <img
+                src="public/images/tos.jpg"
+                alt="sepeda"
+                class="w-100 h-100 sepeda"
+              />
             </div>
             <div class="col-lg-9 mt-3">
               <div class="welcome4 p-4 position-relative h-100 w-100">
                 <div class="">
                   <!-- <div class="welcome-judul2 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div> -->
-                  <div class="my-5 welcome-isi4 lh-1">"Bersiaplah untuk beraktivitas dengan semangat yang menggelora"</div>
-                  <img src="/public/images/jempol tos.png" alt="" class="position-absolute jempoltos" />
+                  <div class="my-5 welcome-isi4 lh-1">
+                    "Bersiaplah untuk beraktivitas dengan semangat yang
+                    menggelora"
+                  </div>
+                  <img
+                    src="/public/images/jempol tos.png"
+                    alt=""
+                    class="position-absolute jempoltos"
+                  />
                 </div>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 home4 mt-3 mt-lg-0">
-            <img src="public/images/tos besar.jpg" alt="sepeda" class="w-100 h-100 sepeda" />
+            <img
+              src="public/images/tos besar.jpg"
+              alt="sepeda"
+              class="w-100 h-100 sepeda"
+            />
           </div>
         </div>
       </div>
@@ -38,7 +60,11 @@
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
-            <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
+            <div
+              class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+            >
+              konten
+            </div>
             <div class="todo-header lh-1 mt-3">
               Berikut adalah fakta-fakta <br />
               yang<span class="todo-header-underline"> menarik </span>
@@ -46,12 +72,26 @@
 
             <div class="row justify-content-center mt-5">
               <div class="col-lg-5">
-                <div class="todo-11 bg-blue position-relative h-100 mx-2 mx-lg-0">
-                  <img src="public/images/sip.png" alt="" class="sipjempol position-absolute" />
+                <div
+                  class="todo-11 bg-blue position-relative h-100 mx-2 mx-lg-0"
+                >
+                  <img
+                    src="public/images/sip.png"
+                    alt=""
+                    class="sipjempol position-absolute"
+                  />
                   <div class="p-4">
-                    <p class="w-75 isi-todo-1">Selalu jaga kepercayaan diri kamu ya!</p>
+                    <p class="w-75 isi-todo-1">
+                      Selalu jaga kepercayaan diri kamu ya!
+                    </p>
                     <div class="isi-todo-1">
-                      <p>Selalu menjaga kepercayaan diri adalah salah satu kunci untuk meraih keberhasilan dan menghadapi tantangan hidup dengan sikap positif. Memiliki kepercayaan diri berarti memiliki keyakinan pada kemampuan dan potensi diri sendiri.</p>
+                      <p>
+                        Selalu menjaga kepercayaan diri adalah salah satu kunci
+                        untuk meraih keberhasilan dan menghadapi tantangan hidup
+                        dengan sikap positif. Memiliki kepercayaan diri berarti
+                        memiliki keyakinan pada kemampuan dan potensi diri
+                        sendiri.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -62,25 +102,44 @@
                     <!-- <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" /> -->
                     <div class="isi-todo-11 p-4">
                       Masi aman kan nafasnya?
-                      <p>Berpikir dalam keadaan tenang dan terfokus sangatlah penting, dan salah satu cara untuk mencapainya adalah dengan menghindari tergesa-gesa dalam bernafas. Seperti angin yang berhembus perlahan-lahan, begitu pula bernafas dengan santai memberi kesempatan bagi pikiran untuk beristirahat dan merenung.</p>
+                      <p>
+                        Berpikir dalam keadaan tenang dan terfokus sangatlah
+                        penting, dan salah satu cara untuk mencapainya adalah
+                        dengan menghindari tergesa-gesa dalam bernafas. Seperti
+                        angin yang berhembus perlahan-lahan, begitu pula
+                        bernafas dengan santai memberi kesempatan bagi pikiran
+                        untuk beristirahat dan merenung.
+                      </p>
                     </div>
                   </div>
                 </div>
 
                 <div class="col-lg-12 mt-3 position-relative">
-                  <img src="public/images/api.png" alt="" class="lope position-absolute" />
+                  <img
+                    src="public/images/api.png"
+                    alt=""
+                    class="lope position-absolute"
+                  />
                   <div class="todo-33 h-100">
                     <img src="public/images/tangan kepal.jpg" alt="" />
                   </div>
                 </div>
               </div>
             </div>
-            <img src="public/images/tiup.png" alt="" class="orangtangan position-absolute" />
+            <img
+              src="public/images/tiup.png"
+              alt=""
+              class="orangtangan position-absolute"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
