--- a/begadang.html
+++ b/begadang.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="en"><head></head>
+<html lang="en">
+  <head></head>
   <body>
     <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-4 px-4 px-lg-0">
             <div class="welcome8 position-relative h-100 milkyway">
-              <img src="public/images/milkyway.png" alt="sepeda" class="w-100 h-100 milkywayimg" />
+              <img
+                src="public/images/milkyway.png"
+                alt="sepeda"
+                class="w-100 h-100 milkywayimg"
+              />
             </div>
           </div>
           <div class="row col-lg-8 home2 row-cols-1 row mt-3 mt-lg-0">
             <div class="col-12 home9">
-              <div class="jam3 justify-content-center d-flex py-3 h-100 position-relative">
+              <div
+                class="jam3 justify-content-center d-flex py-3 h-100 position-relative"
+              >
                 <!-- <div class="todo-judul9 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4 position-absolute">konten</div> -->
                 <p class="m-0 align-self-center">Nighty Night!</p>
                 <!-- <div class="ketjam">
@@ -24,7 +31,11 @@
               <div class="welcome9 p-4 position-relative h-100 w-100">
                 <div class="justify-content-center d-flex py-3 h-100">
                   <!-- <div class="welcome-judul2 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div> -->
-                  <div class="my-5 align-self-center welcome-isi9 lh-1 text-center">Lah kok masih bangun?!?!?!?!</div>
+                  <div
+                    class="my-5 align-self-center welcome-isi9 lh-1 text-center"
+                  >
+                    Lah kok masih bangun?!?!?!?!
+                  </div>
                 </div>
               </div>
             </div>
@@ -36,33 +47,58 @@
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
-            <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
-            <div class="todo-header lh-1 mt-3">Jangan begadang,<span class="todo-header-underline"> nih dampak buruknya!</span></div>
+            <div
+              class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+            >
+              konten
+            </div>
+            <div class="todo-header lh-1 mt-3">
+              Jangan begadang,<span class="todo-header-underline">
+                nih dampak buruknya!</span
+              >
+            </div>
 
             <div class="row justify-content-center mt-5">
               <div class="col-lg-5">
                 <div class="todo-11 bg-purple position-relative h-100">
                   <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Memang harus ya, <br> begadang
-                    <p>Jika Anda perlu begadang, ada beberapa tips yang dapat membantu menjaga kesehatan dan kewaspadaan Anda selama periode tersebut. Pertama, pilih waktu begadang dengan bijak dan hindari melakukannya terlalu sering. </p>
+                    Memang harus ya, <br />
+                    begadang
+                    <p>
+                      Jika Anda perlu begadang, ada beberapa tips yang dapat
+                      membantu menjaga kesehatan dan kewaspadaan Anda selama
+                      periode tersebut. Pertama, pilih waktu begadang dengan
+                      bijak dan hindari melakukannya terlalu sering.
+                    </p>
                   </div>
                 </div>
               </div>
 
               <div class="col-lg-7 mt-3 mt-lg-0">
                 <div class="todo-11 bg-blue position-relative h-100">
-                  <img src="public/images/moon.png" alt="" class="chat position-absolute" />
+                  <img
+                    src="public/images/moon.png"
+                    alt=""
+                    class="chat position-absolute"
+                  />
                   <div class="isi-todo-11 p-4">
                     Begadang gak baik loh!
                     <p>
-                      Begadang memiliki dampak negatif yang berpotensi besar terhadap kesehatan dan kesejahteraan. Kurang tidur dapat mengganggu fungsi kognitif, seperti daya ingat dan konsentrasi, serta menyebabkan penurunan energi yang
+                      Begadang memiliki dampak negatif yang berpotensi besar
+                      terhadap kesehatan dan kesejahteraan. Kurang tidur dapat
+                      mengganggu fungsi kognitif, seperti daya ingat dan
+                      konsentrasi, serta menyebabkan penurunan energi yang
                     </p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-5 mt-3 position-relative">
-                <img src="public/images/api.png" alt="" class="lope position-absolute" />
+                <img
+                  src="public/images/api.png"
+                  alt=""
+                  class="lope position-absolute"
+                />
                 <div class="todo-33 h-100">
                   <img src="public/images/angop.png" alt="" />
                 </div>
@@ -80,17 +116,33 @@
                   <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
                     Kenapa kopi membuat terjaga?
-                    <p>Kopi mengandung kafein, senyawa alami yang memiliki efek merangsang pada sistem saraf pusat manusia. Inilah alasan mengapa kopi dapat membuat Anda merasa terjaga dan lebih bersemangat. Kafein bekerja dengan cara berinteraksi dengan reseptor otak yang disebut adenosin. Adenosin adalah zat kimia yang bertanggung jawab untuk merangsang rasa kantuk dan mempersiapkan tubuh untuk tidur.</p>
+                    <p>
+                      Kopi mengandung kafein, senyawa alami yang memiliki efek
+                      merangsang pada sistem saraf pusat manusia. Inilah alasan
+                      mengapa kopi dapat membuat Anda merasa terjaga dan lebih
+                      bersemangat. Kafein bekerja dengan cara berinteraksi
+                      dengan reseptor otak yang disebut adenosin. Adenosin
+                      adalah zat kimia yang bertanggung jawab untuk merangsang
+                      rasa kantuk dan mempersiapkan tubuh untuk tidur.
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
-            <img src="public/images/emot ngantuk.png" alt="" class="orangtangan position-absolute" />
+            <img
+              src="public/images/emot ngantuk.png"
+              alt=""
+              class="orangtangan position-absolute"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
