--- a/minum.html
+++ b/minum.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
-<html lang="en"><head></head>
+<html lang="en">
+  <head></head>
   <body>
     <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-3 home5">
-            <img src="public/images/air1.jpg" alt="sepeda" class="w-100 h-100 sepeda" />
+            <img
+              src="public/images/air1.jpg"
+              alt="sepeda"
+              class="w-100 h-100 sepeda"
+            />
           </div>
           <div class="col-3 home5">
-            <img src="public/images/air2.jpg" alt="sepeda" class="w-100 h-100 sepeda" />
+            <img
+              src="public/images/air2.jpg"
+              alt="sepeda"
+              class="w-100 h-100 sepeda"
+            />
           </div>
           <div class="col-lg-6 mt-3 mt-lg-0">
-            <div class="welcome5 p-4 position-relative h-100 w-100 mt-3 mt-xl-0">
+            <div
+              class="welcome5 p-4 position-relative h-100 w-100 mt-3 mt-xl-0"
+            >
               <div class="welcome-container">
-                <div class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
+                <div
+                  class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+                >
+                  welcome!
+                </div>
                 <div class="welcome-isi lh-1 mt-3">
                   Kenapa kita butuh<br />
                   air putih? <br />
-                  <p class="lh-base mt-3">Air putih sangat penting bagi kesehatan kita karena tubuh kita bergantung padanya untuk menjalankan berbagai fungsi vital. Tubuh manusia terdiri sebagian besar dari air, dan air berperan dalam menjaga keseimbangan elektrolit, mengatur suhu tubuh, dan menyediakan media bagi reaksi kimia selular yang penting.</p>
+                  <p class="lh-base mt-3">
+                    Air putih sangat penting bagi kesehatan kita karena tubuh
+                    kita bergantung padanya untuk menjalankan berbagai fungsi
+                    vital. Tubuh manusia terdiri sebagian besar dari air, dan
+                    air berperan dalam menjaga keseimbangan elektrolit, mengatur
+                    suhu tubuh, dan menyediakan media bagi reaksi kimia selular
+                    yang penting.
+                  </p>
                 </div>
 
-                <a href="#todo" type="button" class="btn btn-outline-light">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light"
+                  >Selanjutnya</a
+                >
               </div>
-            </div>              
+            </div>
           </div>
         </div>
       </div>
@@ -31,9 +55,15 @@
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
-            <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
+            <div
+              class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+            >
+              konten
+            </div>
             <div class="todo-header lh-1 mt-3">
-              Masa sih ga tau <br /><span class="todo-header-underline">manfaat dari air putih?</span>
+              Masa sih ga tau <br /><span class="todo-header-underline"
+                >manfaat dari air putih?</span
+              >
             </div>
 
             <div class="row justify-content-center mt-5">
@@ -41,23 +71,50 @@
                 <div class="todo-11 bg-yellow2 position-relative h-100">
                   <!-- <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Apa hubungan pencernaan <br> dan air putih?
-                    <p>Air putih sangat penting bagi kesehatan kita karena tubuh kita bergantung padanya untuk menjalankan berbagai fungsi vital. Tubuh manusia terdiri sebagian besar dari air, dan air berperan dalam menjaga keseimbangan elektrolit, mengatur suhu tubuh, dan menyediakan media bagi reaksi kimia selular yang penting. Selain itu, air membantu dalam proses pencernaan dan penyerapan nutrisi, serta membantu dalam pembuangan produk sisa melalui urin dan keringat. Kehadiran air juga mendukung kesehatan jantung, fungsi pembuluh darah, dan pelumasan sendi. Selain itu, air juga membantu menjaga suhu tubuh yang stabil dan menjaga keseimbangan cairan dalam tubuh. Kekurangan air dapat menyebabkan dehidrasi, yang dapat mengganggu berbagai fungsi tubuh dan berdampak negatif pada kesehatan secara keseluruhan. Oleh karena itu, penting untuk memastikan asupan yang cukup air putih setiap hari untuk menjaga tubuh tetap terhidrasi dan berfungsi dengan baik.</p>
+                    Apa hubungan pencernaan <br />
+                    dan air putih?
+                    <p>
+                      Air putih sangat penting bagi kesehatan kita karena tubuh
+                      kita bergantung padanya untuk menjalankan berbagai fungsi
+                      vital. Tubuh manusia terdiri sebagian besar dari air, dan
+                      air berperan dalam menjaga keseimbangan elektrolit,
+                      mengatur suhu tubuh, dan menyediakan media bagi reaksi
+                      kimia selular yang penting. Selain itu, air membantu dalam
+                      proses pencernaan dan penyerapan nutrisi, serta membantu
+                      dalam pembuangan produk sisa melalui urin dan keringat.
+                      Kehadiran air juga mendukung kesehatan jantung, fungsi
+                      pembuluh darah, dan pelumasan sendi. Selain itu, air juga
+                      membantu menjaga suhu tubuh yang stabil dan menjaga
+                      keseimbangan cairan dalam tubuh. Kekurangan air dapat
+                      menyebabkan dehidrasi, yang dapat mengganggu berbagai
+                      fungsi tubuh dan berdampak negatif pada kesehatan secara
+                      keseluruhan. Oleh karena itu, penting untuk memastikan
+                      asupan yang cukup air putih setiap hari untuk menjaga
+                      tubuh tetap terhidrasi dan berfungsi dengan baik.
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 mt-3 mt-lg-0 position-relative">
-                <img src="public/images/air.png" alt="" class="lope position-absolute" />
+                <img
+                  src="public/images/air.png"
+                  alt=""
+                  class="lope position-absolute"
+                />
                 <div class="todo-33 h-100">
                   <img src="public/images/airmuncrat.png" alt="" />
                 </div>
               </div>
 
               <div class="col-12 mt-3">
-                <div class="todo-11 bg-red position-relative h-100 mx-2 mx-lg-0">
+                <div
+                  class="todo-11 bg-red position-relative h-100 mx-2 mx-lg-0"
+                >
                   <!-- <img src="public/images/sip.png" alt="" class="sipjempol position-absolute" /> -->
                   <div class="p-4">
-                    <p class="w-75 mx-auto isi-todo-1 text-center">Manfaat apa saja yang bisa didapat dari air putih</p>
+                    <p class="w-75 mx-auto isi-todo-1 text-center">
+                      Manfaat apa saja yang bisa didapat dari air putih
+                    </p>
 
                     <input id="tab-selengkapnya" type="checkbox" />
                     <label class="judul-table1 p-3" for="tab-selengkapnya">
@@ -67,54 +124,92 @@
                     <div class="isi-todo-5">
                       <div class="isi2-todo23">
                         <p class="mb-3">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 22 22"
+                            fill="none"
+                          >
                             <circle cx="11" cy="11" r="11" fill="white" />
                             <path
                               d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
                               fill="#4D77FF"
                             />
                           </svg>
-                          Air membantu dalam proses pencernaan dengan melunakkan makanan dalam lambung.
+                          Air membantu dalam proses pencernaan dengan melunakkan
+                          makanan dalam lambung.
                         </p>
                         <p class="mb-3">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 22 22"
+                            fill="none"
+                          >
                             <circle cx="11" cy="11" r="11" fill="white" />
                             <path
                               d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
                               fill="#4D77FF"
                             />
                           </svg>
-                          Kedua, air berperan sebagai agen pembersih tubuh dengan membantu mengeluarkan limbah dan racun melalui urine dan keringat, menjaga keseimbangan dalam tubuh.
+                          Kedua, air berperan sebagai agen pembersih tubuh
+                          dengan membantu mengeluarkan limbah dan racun melalui
+                          urine dan keringat, menjaga keseimbangan dalam tubuh.
                         </p>
                         <p class="mb-3">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 22 22"
+                            fill="none"
+                          >
                             <circle cx="11" cy="11" r="11" fill="white" />
                             <path
                               d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
                               fill="#4D77FF"
                             />
                           </svg>
-                          Ketiga, air menjaga keseimbangan cairan tubuh yang penting untuk fungsi organ dan elektrolit.
+                          Ketiga, air menjaga keseimbangan cairan tubuh yang
+                          penting untuk fungsi organ dan elektrolit.
                         </p>
                         <p class="mb-3">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 22 22"
+                            fill="none"
+                          >
                             <circle cx="11" cy="11" r="11" fill="white" />
                             <path
                               d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
                               fill="#4D77FF"
                             />
                           </svg>
-                          Keempat, air membantu mengatur suhu tubuh melalui mekanisme keringat, mencegah overheating dan dehidrasi.
+                          Keempat, air membantu mengatur suhu tubuh melalui
+                          mekanisme keringat, mencegah overheating dan
+                          dehidrasi.
                         </p>
                         <p class="mb-3">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="22"
+                            height="22"
+                            viewBox="0 0 22 22"
+                            fill="none"
+                          >
                             <circle cx="11" cy="11" r="11" fill="white" />
                             <path
                               d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
                               fill="#4D77FF"
                             />
                           </svg>
-                          Kelima, air berfungsi sebagai transportasi bagi nutrisi, oksigen, dan hormon ke seluruh tubuh melalui darah.
+                          Kelima, air berfungsi sebagai transportasi bagi
+                          nutrisi, oksigen, dan hormon ke seluruh tubuh melalui
+                          darah.
                         </p>
                       </div>
                     </div>
@@ -122,12 +217,20 @@
                 </div>
               </div>
             </div>
-            <img src="public/images/tiup.png" alt="" class="orangtangan position-absolute" />
+            <img
+              src="public/images/tiup.png"
+              alt=""
+              class="orangtangan position-absolute"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
