--- a/keluarga.html
+++ b/keluarga.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"><head></head>
+<html lang="en">
+  <head></head>
   <body>
     <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="row col-lg-5 home2 row-cols-1 row">
             <div class="col-12 home2">
-              <img src="public/images/keluarga.png" alt="sepeda" class="w-100 h-100 sepeda" />
+              <img
+                src="public/images/keluarga.png"
+                alt="sepeda"
+                class="w-100 h-100 sepeda"
+              />
             </div>
             <div class="col-12 mt-3">
               <div class="welcome88 p-4 position-relative h-100 w-100">
                 <div class="">
                   <!-- <div class="welcome-judul2 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div> -->
-                  <div class="my-5 welcome-isi4 lh-1 text-center">"Jangan lupa habiskan waktumu untuk keluarga"</div>
+                  <div class="my-5 welcome-isi4 lh-1 text-center">
+                    "Jangan lupa habiskan waktumu untuk keluarga"
+                  </div>
                 </div>
               </div>
             </div>
@@ -20,14 +27,20 @@
           <div class="col-lg-7 mt-3 mt-lg-0">
             <div class="welcome8 p-4 position-relative h-100">
               <div class="welcome-container">
-                <div class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome</div>
+                <div
+                  class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+                >
+                  welcome
+                </div>
                 <div class="welcome-isi lh-1 mt-3">
                   Family<br />
                   Time nihhh! <br />
                   <!-- <p class="lh-base mt-3">Ayo Awali Harimu dengan Penuh Semangat dan Produktivitas</p> -->
                 </div>
 
-                <a href="#todo" type="button" class="btn btn-outline-light mt-4">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light mt-4"
+                  >Selanjutnya</a
+                >
 
                 <!-- <img class="position-absolute alarm" src="public/images/designrip-17.svg" alt="" /> -->
               </div>
@@ -41,16 +54,30 @@
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
-            <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
-            <div class="todo-header lh-1 mt-3">Yuk habiskan waktu <span class="todo-header-underline">dengan keluargamu</span></div>
+            <div
+              class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+            >
+              konten
+            </div>
+            <div class="todo-header lh-1 mt-3">
+              Yuk habiskan waktu
+              <span class="todo-header-underline">dengan keluargamu</span>
+            </div>
 
             <div class="row justify-content-center mt-5">
               <div class="col-lg-8 mt-3 mt-lg-0 order-2 order-lg-1">
                 <div class="todo-11 bg-blue position-relative h-100">
                   <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Penting loh waktu <br> keluarga itu!
-                    <p>Family time atau waktu bersama keluarga adalah momen yang penting dan berharga dalam kehidupan kita. Ini adalah saat di mana seluruh anggota keluarga berkumpul untuk berinteraksi, berbagi cerita, dan menciptakan kenangan indah bersama. Dalam kesibukan</p>
+                    Penting loh waktu <br />
+                    keluarga itu!
+                    <p>
+                      Family time atau waktu bersama keluarga adalah momen yang
+                      penting dan berharga dalam kehidupan kita. Ini adalah saat
+                      di mana seluruh anggota keluarga berkumpul untuk
+                      berinteraksi, berbagi cerita, dan menciptakan kenangan
+                      indah bersama. Dalam kesibukan
+                    </p>
                   </div>
                 </div>
               </div>
@@ -61,7 +88,11 @@
                 </div>
               </div>
               <div class="col-lg-8 mt-3 position-relative order-3">
-                <img src="public/images/home-png-2.png" alt="" class="rumah position-absolute" />
+                <img
+                  src="public/images/home-png-2.png"
+                  alt=""
+                  class="rumah position-absolute"
+                />
                 <div class="todo-33 h-100">
                   <img src="public/images/keluarga1.png" alt="" />
                 </div>
@@ -69,20 +100,36 @@
 
               <div class="col-lg-4 mt-3 order-4">
                 <div class="todo-11 bg-yellow3 position-relative h-100">
-                  <img src="public/images/msg.png" alt="" class="chat position-absolute" />
+                  <img
+                    src="public/images/msg.png"
+                    alt=""
+                    class="chat position-absolute"
+                  />
                   <div class="isi-todo-11 p-4">
                     Coba sharing harimu!
-                    <p>Berbagi pikiran, perasaan, dan pengalaman dengan keluarga memiliki manfaat yang besar bagi kesehatan mental. Ketika kita berbicara tentang apa yang kita alami dan</p>
+                    <p>
+                      Berbagi pikiran, perasaan, dan pengalaman dengan keluarga
+                      memiliki manfaat yang besar bagi kesehatan mental. Ketika
+                      kita berbicara tentang apa yang kita alami dan
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
-            <img src="public/images/heart-2.png" alt="" class="orangtangan position-absolute" />
+            <img
+              src="public/images/heart-2.png"
+              alt=""
+              class="orangtangan position-absolute"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
