--- a/persiapan.html
+++ b/persiapan.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="en"><head></head>
+<html lang="en">
+  <head></head>
   <body>
     <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 home2">
-            <img src="public/images/siap.jpg" alt="sepeda" class="w-100 h-100 sepeda" />
+            <img
+              src="public/images/siap.jpg"
+              alt="sepeda"
+              class="w-100 h-100 sepeda"
+            />
           </div>
           <div class="col-lg-7 mt-3 mt-lg-0">
             <div class="welcome2 p-4 position-relative h-100 w-100">
               <div class="welcome-container">
-                <div class="welcome-judul2 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
-                <div class="welcome-isi2 lh-1 mt-3">Udah jam segini kamu ga siap siap?</div>
+                <div
+                  class="welcome-judul2 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+                >
+                  welcome!
+                </div>
+                <div class="welcome-isi2 lh-1 mt-3">
+                  Udah jam segini kamu ga siap siap?
+                </div>
               </div>
             </div>
           </div>
@@ -32,7 +43,11 @@
       <div class="container mt-5 overflow-hidden">
         <div class="container-dalam">
           <div class="todo-container position-relative">
-            <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
+            <div
+              class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+            >
+              konten
+            </div>
             <div class="todo-header lh-1 mt-3">
               Berikut adalah fakta-fakta <br />
               yang<span class="todo-header-underline"> menarik </span>
@@ -42,10 +57,18 @@
               <div class="col-lg-4 mb-3 mb-lg-0">
                 <div class="todo-2 position-relative py-4 mt-3 mt-lg-0 h-100">
                   <!-- <img src="public/images/gymming.png" alt="" class="position-absolute gym" /> -->
-                  <div class="isi-todo-23 px-5 py-3">fakta menarik dari mandi pagi</div>
+                  <div class="isi-todo-23 px-5 py-3">
+                    fakta menarik dari mandi pagi
+                  </div>
                   <div class="isi2-todo23">
                     <p class="mb-1">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="22"
+                        height="22"
+                        viewBox="0 0 22 22"
+                        fill="none"
+                      >
                         <circle cx="11" cy="11" r="11" fill="white" />
                         <path
                           d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
@@ -55,7 +78,13 @@
                       menjaga berat badan
                     </p>
                     <p class="mb-1">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="22"
+                        height="22"
+                        viewBox="0 0 22 22"
+                        fill="none"
+                      >
                         <circle cx="11" cy="11" r="11" fill="white" />
                         <path
                           d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
@@ -65,7 +94,13 @@
                       mencegah penyakit
                     </p>
                     <p class="mb-1">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="22"
+                        height="22"
+                        viewBox="0 0 22 22"
+                        fill="none"
+                      >
                         <circle cx="11" cy="11" r="11" fill="white" />
                         <path
                           d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
@@ -83,14 +118,22 @@
                   <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
                     Jangan lupa siapkan senyummu ya!
-                    <p>Senyum di pagi hari memiliki dampak yang luar biasa pada berbagai aspek kesehatan dan kesejahteraan kita. Ketika kita memulai hari dengan senyuman, kita memberi diri sendiri manfaat emosional dan fisik yang signifikan.
+                    <p>
+                      Senyum di pagi hari memiliki dampak yang luar biasa pada
+                      berbagai aspek kesehatan dan kesejahteraan kita. Ketika
+                      kita memulai hari dengan senyuman, kita memberi diri
+                      sendiri manfaat emosional dan fisik yang signifikan.
                     </p>
                   </div>
                 </div>
               </div>
 
               <div class="col-lg-4 mt-3 position-relative">
-                <img src="public/images/lopelope.png" alt="" class="lope position-absolute" />
+                <img
+                  src="public/images/lopelope.png"
+                  alt=""
+                  class="lope position-absolute"
+                />
                 <div class="todo-33 h-100">
                   <img src="public/images/Group 149.png" alt="" />
                 </div>
@@ -98,20 +141,37 @@
 
               <div class="col-lg-8 mt-3">
                 <div class="todo-11 bg-purple position-relative h-100">
-                  <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" />
+                  <img
+                    src="public/images/icon-food-fried-eggs.png"
+                    alt=""
+                    class="jempol position-absolute"
+                  />
                   <div class="isi-todo-11 p-4">
                     Kenapa harus sarapan?
-                    <p>Sarapan adalah kebiasaan penting dengan manfaat yang tak terbantahkan bagi kesehatan dan kesejahteraan kita. Setelah malam berpuasa saat tidur, tubuh kita membutuhkan sumber energi untuk memulai hari dengan baik.</p>
+                    <p>
+                      Sarapan adalah kebiasaan penting dengan manfaat yang tak
+                      terbantahkan bagi kesehatan dan kesejahteraan kita.
+                      Setelah malam berpuasa saat tidur, tubuh kita membutuhkan
+                      sumber energi untuk memulai hari dengan baik.
+                    </p>
                   </div>
                 </div>
               </div>
             </div>
-            <img src="public/images/orangtangan.png" alt="" class="orangtangan position-absolute" />
+            <img
+              src="public/images/orangtangan.png"
+              alt=""
+              class="orangtangan position-absolute"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
