--- a/sore.html
+++ b/sore.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
-<html lang="en"><head></head>
+<html lang="en">
+  <head></head>
   <body>
     <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-6">
-            <div class="welcome7 p-4 position-relative h-100 w-100 mt-3 mt-xl-0">
+            <div
+              class="welcome7 p-4 position-relative h-100 w-100 mt-3 mt-xl-0"
+            >
               <div class="welcome-container">
-                <div class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
+                <div
+                  class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+                >
+                  welcome!
+                </div>
                 <div class="welcome-isi lh-1 mt-3">
                   Wah kayanya udah selesai nih tugas hari ini
-                  <p class="lh-base mt-3">Tugas Hari Ini Sudah Selesai: Waktunya untuk Istirahat dan Bersantai</p>
+                  <p class="lh-base mt-3">
+                    Tugas Hari Ini Sudah Selesai: Waktunya untuk Istirahat dan
+                    Bersantai
+                  </p>
                 </div>
 
-                <a href="#todo" type="button" class="btn btn-outline-light">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light"
+                  >Selanjutnya</a
+                >
               </div>
             </div>
           </div>
           <div class="col-3 home5 mt-5 mt-xl-0">
-            <img src="public/images/senja1.png" alt="sepeda" class="w-100 h-100 sepeda" />
+            <img
+              src="public/images/senja1.png"
+              alt="sepeda"
+              class="w-100 h-100 sepeda"
+            />
           </div>
           <div class="col-3 home5 mt-5 mt-xl-0">
-            <img src="public/images/senja2.png" alt="sepeda" class="w-100 h-100 sepeda" />
+            <img
+              src="public/images/senja2.png"
+              alt="sepeda"
+              class="w-100 h-100 sepeda"
+            />
           </div>
         </div>
       </div>
@@ -30,8 +50,15 @@
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
-            <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
-            <div class="todo-header lh-1 mt-3"><span class="todo-header-underline"> Waktu sore</span> enaknya ngapain ya?</div>
+            <div
+              class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4"
+            >
+              konten
+            </div>
+            <div class="todo-header lh-1 mt-3">
+              <span class="todo-header-underline"> Waktu sore</span> enaknya
+              ngapain ya?
+            </div>
 
             <div class="row justify-content-center mt-5">
               <div class="row col-lg-8 order-2 order-lg-1 mt-3 mt-lg-0">
@@ -43,11 +70,23 @@
 
                 <div class="col-lg-7 mt-3">
                   <div class="todo-2 position-relative pb-5 mt-3 mt-lg-0">
-                    <img src="public/images/matahariii.png" alt="" class="position-absolute matahari" />
-                    <div class="isi-todo-7 px-5 py-3">fakta menarik dari mandi pagi</div>
+                    <img
+                      src="public/images/matahariii.png"
+                      alt=""
+                      class="position-absolute matahari"
+                    />
+                    <div class="isi-todo-7 px-5 py-3">
+                      fakta menarik dari mandi pagi
+                    </div>
                     <div class="isi2-todo7">
                       <p class="mb-1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="22"
+                          height="22"
+                          viewBox="0 0 22 22"
+                          fill="none"
+                        >
                           <circle cx="11" cy="11" r="11" fill="white" />
                           <path
                             d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
@@ -57,7 +96,13 @@
                         menjaga berat badan
                       </p>
                       <p class="mb-1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="22"
+                          height="22"
+                          viewBox="0 0 22 22"
+                          fill="none"
+                        >
                           <circle cx="11" cy="11" r="11" fill="white" />
                           <path
                             d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
@@ -67,7 +112,13 @@
                         mencegah penyakit
                       </p>
                       <p class="mb-1">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          width="22"
+                          height="22"
+                          viewBox="0 0 22 22"
+                          fill="none"
+                        >
                           <circle cx="11" cy="11" r="11" fill="white" />
                           <path
                             d="M7 10.5C6.72386 10.5 6.5 10.7239 6.5 11C6.5 11.2761 6.72386 11.5 7 11.5L7 10.5ZM14.3536 11.3536C14.5488 11.1583 14.5488 10.8417 14.3536 10.6464L11.1716 7.46447C10.9763 7.2692 10.6597 7.2692 10.4645 7.46447C10.2692 7.65973 10.2692 7.97631 10.4645 8.17157L13.2929 11L10.4645 13.8284C10.2692 14.0237 10.2692 14.3403 10.4645 14.5355C10.6597 14.7308 10.9763 14.7308 11.1716 14.5355L14.3536 11.3536ZM7 11.5H14V10.5H7L7 11.5Z"
@@ -87,26 +138,45 @@
               </div>
 
               <div class="col-lg-4 order-1 order-lg-2 position-relative">
-                <div class="todo-11 bg-green position-relative h-100 mx-2 mx-lg-0">
-                  <img src="public/images/emot tapa.png" alt="" class="tapa position-absolute" />
+                <div
+                  class="todo-11 bg-green position-relative h-100 mx-2 mx-lg-0"
+                >
+                  <img
+                    src="public/images/emot tapa.png"
+                    alt=""
+                    class="tapa position-absolute"
+                  />
                   <div class="p-4">
-                    <p class="isi-todo-1">nih hal-hal yang bikin sehat di waktu sore</p>
+                    <p class="isi-todo-1">
+                      nih hal-hal yang bikin sehat di waktu sore
+                    </p>
                     <div class="isi-todo-1">
                       <p>
-                        Sore hari adalah waktu yang tepat untuk melakukan berbagai kegiatan yang mendukung kesehatan dan kesejahteraan. Anda dapat memanfaatkan waktu ini dengan ber Olahraga ringan seperti yoga atau peregangan dapat membantu
-                        menjaga fleksibilitas dan kesehatan otot.
+                        Sore hari adalah waktu yang tepat untuk melakukan
+                        berbagai kegiatan yang mendukung kesehatan dan
+                        kesejahteraan. Anda dapat memanfaatkan waktu ini dengan
+                        ber Olahraga ringan seperti yoga atau peregangan dapat
+                        membantu menjaga fleksibilitas dan kesehatan otot.
                       </p>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <img src="public/images/emotmac.png" alt="" class="orangtangan position-absolute" />
+            <img
+              src="public/images/emotmac.png"
+              alt=""
+              class="orangtangan position-absolute"
+            />
           </div>
         </div>
       </div>
     </section>
     <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
